# rnotes-tmp

./: .gitattributes  .gitignore  LICENSE-MIT  README.adoc
.github/workflows/: build.yml
src/: editor.htm  settings.htm
src-tauri/: .gitattributes  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/: b-end.js  f-end.js  settings.js
src/css/editor/: dialogs.css  layout.css  main.css  tabs.css
src/css/settings/: layout.css  main.css
src/css/share/: fonts.css  win.css
src/js/editor/: dialogs.js  main.js  master.js  tabs.js
src/js/settings/: main.js
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
website/: index.html
website/api/: f-end.js  settings.js
website/api/wasm/: writer.js  writer_bg.wasm
website/css/editor/: dialogs.css  layout.css  main.css  tabs.css
website/js/editor/: dialogs.js  main.js  master.js  navbar.js  tabs.js
